[workspace]
members = [
    "fifo-mempool",
    "libp2p-network",
    "host-integration"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
bytesize = "1.0"
eyre = "0.6"
futures = "0.3"
libp2p             = { version = "0.56.0", features = ["macros", "identify", "tokio", "ed25519", "ecdsa", "tcp", "quic", "noise", "yamux", "gossipsub", "dns", "ping", "metrics", "request-response", "cbor", "serde", "kad"] }
libp2p-gossipsub   = { version = "0.49.0", features = ["metrics"] }
libp2p-identity = "0.2.12"
prometheus = "0.13"
prometheus-client = "0.23"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
protox = "0.8.0"
ractor = { version = "0.14.6", default-features = false, features = ["async-trait", "tokio_runtime"] }
seahash            = "4.1"
serde = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.46.1", features = ["full", "test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.dependencies.malachitebft-proto]
git = "https://github.com/informalsystems/malachite.git"
branch = "anca/actor_with_fifo_mempool"
package = "informalsystems-malachitebft-proto"

[workspace.dependencies.malachitebft-metrics]
git = "https://github.com/informalsystems/malachite.git"
branch = "anca/actor_with_fifo_mempool"
package = "informalsystems-malachitebft-metrics"

[workspace.dependencies.malachitebft-config]
git = "https://github.com/informalsystems/malachite.git"
branch = "anca/actor_with_fifo_mempool"
package = "informalsystems-malachitebft-config"

