[package]
name = "host-integration"
version = "0.1.0"
edition = "2021"

[lib]
name = "host_integration"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
eyre = { workspace = true }
fifo-mempool = { path = "../fifo-mempool" }
libp2p = { workspace = true }
libp2p-identity = { workspace = true }
libp2p-network = { path = "../libp2p-network" }
malachitebft-config = { workspace = true }
prometheus-client = { workspace = true }
prost = { workspace = true }
ractor = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }