[package]
name = "libp2p-network"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true } 
eyre = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
libp2p-gossipsub = { workspace = true, features = ["metrics"] }
libp2p-identity = { workspace = true }
malachitebft-proto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
ractor = { workspace = true }
seahash = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }